--- a/.github/workflows/open-ai-app.yml
+++ b/.github/workflows/open-ai-app.yml
@@ -20,7 +20,7 @@ jobs:
       - name: 🍏 Set up Node.js version
         uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
+          node-version: "20"
 
       - name: ⚙️ npm install and build
         run: |
@@ -65,7 +65,7 @@ jobs:
       - name: 🍏 Set up Node.js version
         uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
+          node-version: "20"
 
       - name: ⬇️ Download artifact from build job
         uses: actions/download-artifact@v4
